# photo_gallery_linux

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Readme.md  build_log.txt  last_directory.conf  style.css
.agent/rules/: rules.md
.agent/skills/c-to-rust-migration/: SKILL.md
.agent/skills/c-to-rust-migration/references/: api_reference.md
.agent/skills/c-to-rust-migration/scripts/: example.py
.agent/skills/code-quality-auditor/: SKILL.md
.agent/skills/code-quality-auditor/references/: api_reference.md
.agent/skills/code-quality-auditor/scripts/: example.py
.agent/skills/desktop-native/: SKILL.md
.agent/skills/git-deploy/: SKILL.md
.agent/skills/linux-packaging/: SKILL.md
.agent/skills/linux-packaging/references/: api_reference.md
.agent/skills/linux-packaging/scripts/: example.py
.agent/skills/native-orchestrator/: SKILL.md
.agent/skills/rust-gtk4-expert/: SKILL.md
.agent/skills/rust-gtk4-expert/references/: api_reference.md
.agent/skills/rust-gtk4-expert/scripts/: example.py
.agent/skills/skill-creator/: SKILL.md
legacy_c/: meson.build
legacy_c/src/: gallery.c  gallery.h  interface.c  interface.h  main.c
src/: gallery.c  gallery.h  interface.c  interface.h  main.c  main.rs
src/model/: gallery.rs  mod.rs
src/view/: mod.rs  window.rs
src/view_model/: gallery_view_model.rs  mod.rs
